<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Share</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">欢迎来到 Share</string>
    <string name="save_picture">保存图片</string>
    <string name="delete_comment">删除评论</string>
    <string name="send_works">发布作品</string>
    <string name="collect_remind">收藏家的宝箱怎么能是空的呢？\n快来寻宝吧！</string>
    <string name="comment_remind">还没有评论哦，快去发布一个圈子吧！</string>
    <string name="favor_remind">还没有点赞哦，快去圈子看看吧！</string>
    <string name="mywork_remind">咦？别的小朋友都有作品了\n快来上传吧！</string>
    <string name="signal_remind">摊手？好像收不到信号了呢\n下拉刷新吧！</string>
    <string name="focus_remind">还没有关注哦，快去圈子关注你喜欢的人吧！</string>
    <string name="fans_remind">还没有粉丝哦，快去发布一个圈子吧！</string>
    <string name="no_network_remind">找不到网络啦！</string>
    <string name="system_remind">还没有系统通知哦！</string>
    <string name="user_name">%1$s的主页</string>
    <string name="bottom_remind">已经到底啦</string>

    <!--个人信息-->
    <string name="face">头像</string>
    <string name="username">用户名</string>
    <string name="nickname">昵称</string>
    <string name="login_txt">登录</string>
    <string name="register_txt">注册</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="signature">个性签名</string>
    <string name="password">密码</string>
    <string name="repassword">确认密码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_repassword">请再次输入密码</string>
    <string name="hint_username">请输入手机号</string>
    <string name="hint_nickname">请输入昵称</string>
    <string name="content_signature">这个人很懒，什么都没有留下</string>
    <!--个人信息-->

    <!--我的-->
    <string name="me_hot_text">人气</string>
    <string name="me_focus_text">关注</string>
    <string name="me_fans_text">粉丝</string>
    <string name="me_exit_text">退出登录</string>
    <string name="me_comment_text">消息</string>
    <string name="me_help_text">意见与反馈</string>
    <string name="me_setting_text">设置</string>
    <string name="me_favor_text">我的收藏</string>
    <string name="me_report_text">成长报告</string>
    <string name="me_record_number">0</string>
    <string name="me_app_version">V1.5</string>
    <string name="confirm_modify_text">确认修改</string>
    <!--我的-->

    <!--打卡-->
    <string name="date_check_text">今日打卡</string>
    <string name="before_date_check_text">每日打卡</string>
    <!--打卡-->

    <!--新鲜事-->
    <string name="add_news_btn_release_txt">发布</string>
    <string name="add_news_et_title_hint_text">标题</string>
    <string name="add_news_et_hint_text">想说的话</string>
    <!--新鲜事-->

    <!--服务器-->
    <string name="config_server_config_title">服务器</string>
    <string name="config_server_config_ip">IP地址:</string>
    <string name="config_server_config_ip_hint">输入服务器IP地址</string>
    <string name="config_server_config_port">端口号:</string>
    <string name="config_server_config_port_hint">输入服务器的端口号</string>
    <string name="config_btn_save_txt">保存</string>
    <!--服务器-->

    <!--个人主页-->
    <string name="homepage_can_not_modify">不可修改</string>
    <string name="homepage_btn_update">更新</string>
    <string-array name="sex_array">
        <item>男</item>
        <item>女</item>
    </string-array>
    <!--个人主页-->

    <!--新鲜事详细-->
    <string name="new_detail_comment">全部评论</string>
    <string name="new_detail_add_comment">评论</string>
    <string name="new_detail_add_collection">收藏</string>
    <string name="new_detail_add_favor">点赞</string>
    <string name="new_detail_add_comment_hint">发表新评论...</string>
    <!--新鲜事详细-->

    <string name="loading_summary">正在努力的加载中...</string>


</resources>