<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/title_custom" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical">

                <com.example.administrator.share.util.OvalImageView
                    android:id="@+id/iv_circle_detail_face"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_image" />

                <TextView
                    android:id="@id/news_detail_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/iv_circle_detail_face"
                    android:text="@string/app_name"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_focus"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_orange_2"
                    android:text="关注"
                    android:textColor="@color/fuxk_base_color_black" />
            </RelativeLayout>

            <View
                style="@style/bg_line"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@id/detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Title"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@id/news_detail_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_title"
                    android:text="Time"
                    android:textColor="@color/darkgrey"
                    android:textSize="12sp" />
            </RelativeLayout>

            <TextView
                android:id="@id/news_detail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/app_name" />

            <ImageView
                android:id="@id/news_detail_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:visibility="gone"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="#续命咖啡#"
                    android:textColor="#cccccc"/>
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="20dp"
                    android:layout_toStartOf="@+id/tv_circle_detail_click_times"
                    android:src="@drawable/icon_circle_detail_eye" />

                <TextView
                    android:id="@+id/tv_circle_detail_click_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="15dp"
                    android:layout_toStartOf="@+id/iv_circle_detail_collection"
                    android:text="0"
                    android:textSize="14sp"
                    android:textColor="#cccccc"/>

                <ImageView
                    android:id="@+id/iv_circle_detail_collection"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_toStartOf="@+id/tv_circle_detail_collect_times"
                    android:src="@drawable/icon_circle_detail_collection" />

                <TextView
                    android:id="@+id/tv_circle_detail_collect_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="15dp"
                    android:layout_toStartOf="@+id/iv_circle_detail_comment"
                    android:text="0"
                    android:textSize="14sp"
                    android:textColor="#cccccc"/>

                <ImageView
                    android:id="@+id/iv_circle_detail_comment"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_toStartOf="@+id/tv_circle_detail_comment_times"
                    android:src="@drawable/icon_circle_detail_comment" />

                <TextView
                    android:id="@+id/tv_circle_detail_comment_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="2dp"
                    android:text="0"
                    android:textSize="14sp"
                    android:textColor="#cccccc"/>
            </RelativeLayout>

            <View style="@style/bg_line"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/new_detail_comment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/aliceblue" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/news_detail_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@id/news_detail_add_commment_pane"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone">

        <EditText
            android:id="@id/news_detail_add_commment_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edit_text_round_bg"
            android:hint="@string/new_detail_add_comment_hint"
            android:paddingStart="5dp" />

        <ImageView
            android:id="@id/news_detail_add_commment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message_send" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/aliceblue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/snow"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:id="@id/news_detail_add_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_alert_comment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/new_detail_add_comment" />
        </LinearLayout>

        <TextView
            android:layout_weight="0.005"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/darkgray"/>

        <LinearLayout
            android:id="@id/news_detail_add_collection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_collection"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_is_not_collected" />

            <TextView
                android:id="@+id/tv_collection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/new_detail_add_collection" />
        </LinearLayout>

        <TextView
            android:layout_weight="0.005"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/darkgray"/>

        <LinearLayout
            android:id="@id/news_detail_add_favor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_favo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_is_not_favor" />

            <TextView
                android:id="@+id/tv_favo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/new_detail_add_favor" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>